<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.tix320</groupId>
	<artifactId>jouska</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>

	<properties>
		<revision>3.0.0</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<sonder.version>3.0.1</sonder.version>
		<ravel.version>0.2.0</ravel.version>
		<deft.version>0.3.0</deft.version>
		<classgraph.version>4.8.102</classgraph.version>
	</properties>

	<modules>
		<module>jouska-core</module>
		<module>jouska-client</module>
		<module>jouska-server</module>
		<module>jouska-bot</module>
		<module>jouska-ci</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>16</source>
					<target>16</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<finalName>${project.artifactId}</finalName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
<!--		<dependency>-->
<!--			<groupId>com.github.tix320</groupId>-->
<!--			<artifactId>kiwi</artifactId>-->
<!--			<version>0.25.0</version>-->
<!--		</dependency>-->
	</dependencies>

</project>
